automl ntebook edit

--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -74,7 +74,7 @@
     "      'Subscription id: ' + ws.subscription_id, \n",
     "      'Resource group: ' + ws.resource_group, sep = '\\n')\n",
     "\n",
-    "run = exp.start_logging()"
+    "run = experiment.start_logging()"
    ]
   },
   {
