--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "gather": {
      "logged": 1598423888013
@@ -32,30 +32,34 @@
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
-    "from azureml.widgets import RunDetails\n",
-    "\n",
     "from azureml.data.dataset_factory import TabularDatasetFactory\n",
     "from azureml.train.automl import AutoMLConfig\n",
+    "from azureml.widgets import RunDetails\n",
     "\n",
-    "import pandas as pd\n",
+    "from pprint import pprint\n",
+    "from azureml.core import Model\n",
+    "from train import clean_data\n",
+    "\n",
+    "from azureml.core.model import InferenceConfig\n",
+    "from azureml.core.environment import Environment\n",
+    "from azureml.core.webservice import AciWebservice\n",
+    "\n",
+    "import pandas as\n",
+    "import os\n",
     "import json\n",
-    "import joblib"
+    "import requests\n",
+    "import joblib\n",
+    "\n",
+    "# Check core SDK version number\n",
+    "print(\"SDK version:\", azureml.core.VERSION)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Dataset\n",
-    "\n",
-    "### Overview\n",
-    "TODO: In this markdown cell, give an overview of the dataset you are using. Also mention the task you will be performing.\n",
-    "\n",
-    "The dataset used in this project is a loan default prediction dataset. The project entails identifying customers who would either default or not  default after taking a loan credit. This transalates to a binary classification: to default or not to default. Hence, a Logistic regression model would be built using azure's automl funcionality. SKLearn's logistic regression algorithm is a well-known supervised learning approach optimized for dichotomous or binary variables.\n",
-    "\n",
-    "\n",
-    "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
-   ]
+    "### Workspace and compute cluster configuration"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -79,18 +83,97 @@
     "ws = Workspace.from_config()\n",
     "\n",
     "# choose a name for experiment\n",
-    "experiment_name = 'your experiment name here'\n",
+    "experiment_name = 'loan-default-automl'\n",
     "\n",
-    "experiment=Experiment(ws, experiment_name)"
+    "experiment=Experiment(ws, experiment_name)\n",
+    "\n",
+    "print('Workspace name: ' + ws.name, \n",
+    "      'Azure region: ' + ws.location, \n",
+    "      'Subscription id: ' + ws.subscription_id, \n",
+    "      'Resource group: ' + ws.resource_group, sep = '\\n')\n",
+    "\n",
+    "run = experiment.start_logging()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cpu_cluster_name = \"cpu-Cluster\" \n",
+    "\n",
+    "#verify that cluster does not exist already\n",
+    "try:\n",
+    "    cpu_cluster = ComputeTarget(workspace=ws, name=cpu_cluster_name)\n",
+    "    print(f\"Found existing cluster: {cpu_cluster_name} to be used.\")\n",
+    "except ComputeTargetException:\n",
+    "    print('Creating a new compute target...')\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_DS12_V2', max_nodes=6)\n",
+    "\n",
+    "    cpu_cluster = ComputeTarget(ws, cpu_cluster_name, compute_config)\n",
+    "\n",
+    "cpu_cluster.wait_for_completion(show_output=True, min_node_count = 1, timeout_in_minutes = 10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AutoML Configuration\n",
+    "## Dataset\n",
     "\n",
-    "TODO: Explain why you chose the automl settings and cofiguration you used below."
+    "### Overview\n",
+    "\n",
+    "The dataset used in this project is a loan default prediction dataset. The project entails identifying customers who would either default or not  default after taking a loan credit. This transalates to a binary classification: to default or not to default. Hence, a Logistic regression model would be built using azure's automl funcionality. SKLearn's logistic regression algorithm is a well-known supervised learning approach optimized for dichotomous or binary variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retrieve data from github\n",
+    "\n",
+    "url = \"https://github.com/ChidiNdego/nd00333-capstone/blob/master/starter_file/loan_default_prediction.csv\"\n",
+    "data = TabularDatasetFactory.from_delimited_files(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the clean_data function to clean your data.\n",
+    "x, y = clean_data(data)\n",
+    "\n",
+    "import pandas as pd\n",
+    "# Add cleaned target column to cleaned predictor variables\n",
+    "train_data = pd.concat([x,y],axis=1)\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get default datastore\n",
+    "default_ds = ws.get_default_datastore()\n",
+    "\n",
+    "# Register the dataset with name 'AutoML_data'\n",
+    "dataSet = TabularDatasetFactory.register_pandas_dataframe(train_data,target=(default_ds,'AutoMLData'),name='AutoML_data',show_progress=True)\n",
+    "\n",
+    "automl_data = ws.datasets.get('AutoML_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AutoML Configuration"
    ]
   },
   {
@@ -112,12 +195,40 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Put your automl settings here\n",
-    "automl_settings = {}\n",
+    "automl_settings = {\n",
+    "    \"experiment_timeout_minutes\": 30,\n",
+    "    \"max_concurrent_iterations\": 5,\n",
+    "    \"n_cross_validations\": 5,\n",
+    "    \"primary_metric\" : 'AUC_weighted'\n",
+    "}\n",
     "\n",
-    "# TODO: Put your automl config here\n",
-    "automl_config = AutoMLConfig()"
+    "automl_config = AutoMLConfig(compute_target=cpu_cluster,\n",
+    "                             task = \"classification\",\n",
+    "                             training_data=automl_data,\n",
+    "                             label_column_name=\"loanDefault\",   \n",
+    "                             enable_early_stopping= True,\n",
+    "                             featurization= 'auto',\n",
+    "                             debug_log = \"automl_errors.log\",\n",
+    "                             **automl_settings)"
    ]
+  },
+  {
+   "source": [
+    "### Reasons for automl settings and configuration\n",
+    "\n",
+    "*   `\"experiment_timeout_minutes\": 30`: Maximum amount of time (in minutes) to complete training itertions. Set at 30 minutes because dataset has over 10,000 entries.\n",
+    "*   `\"max_concurrent_iterations\": 5`: Maximum number of iterations that can be executed simultaneously. Advisably, this value should be less than the number of compute cluster node.\n",
+    "*   `\"n_cross_validations\": 5`: Cross validation is a model validation technique used to reduce overfitting. `n` is the number of training examples.\n",
+    "*   `\"primary_metric\" : 'AUC_weighted'`: This parameter determines the metric to be used during model training for optimization. `AUC_weighted` is the generally advised metric for imbalanced classes.\n",
+    "*   `compute_target=cpu_cluster`: This points to the compute cluster configuration created earlier.\n",
+    "*   `task = \"classification\"`: The problem in view is a classification task.\n",
+    "*   `training_data=automl_data`: Specifies the dataset to be used: an external dataset already registered in azure datastore.\n",
+    "*   `label_column_name=\"loanDefault\"`: Specifies the dependent variable to be predicted.\n",
+    "*   `enable_early_stopping=True`: Allows for an early stopping rule to be applied.\n",
+    "*   `featurization= 'auto'`: Allows azure to automatically perform feature engineering."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -138,7 +249,8 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Submit your experiment\n",
+    "# Submit your experiment\n",
+    "print('Submitting AutoML experiment...')\n",
     "remote_run = experiment.submit(automl_config)"
    ]
   },
@@ -148,9 +260,7 @@
    "source": [
     "## Run Details\n",
     "\n",
-    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
-    "\n",
-    "TODO: In the cell below, use the `RunDetails` widget to show the different experiments."
+    "Use the `RunDetails` widget to show the different experiments."
    ]
   },
   {
@@ -171,7 +281,17 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "RunDetails(automl_run).show()\n",
+    "remote_run.wait_for_completion(show_output=True)"
+   ]
+  },
+  {
+   "source": [
+    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
@@ -201,7 +321,41 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Retrieve the best automl model\n",
+    "\n",
+    "best_automl_run, fitted_model = remote_run.get_output()\n",
+    "print(best_automl_run)\n",
+    "\n",
+    "#Returns the various metric values for the best run\n",
+    "best_run_metrics = best_automl_run.get_metrics()\n",
+    "for metric_name in best_run_metrics:\n",
+    "    metric = best_run_metrics[metric_name]\n",
+    "    print('{}: {}'.format(metric_name, metric))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters of the best model\n",
+    "def print_model(model, prefix=\"\"):\n",
+    "    for step in model.steps:\n",
+    "        print(prefix + step[0])\n",
+    "        if hasattr(step[1], 'estimators') and hasattr(step[1], 'weights'):\n",
+    "            pprint({'estimators': list(\n",
+    "                e[0] for e in step[1].estimators), 'weights': step[1].weights})\n",
+    "            print()\n",
+    "            for estimator in step[1].estimators:\n",
+    "                print_model(estimator[1], estimator[0] + ' - ')\n",
+    "        else:\n",
+    "            pprint(step[1].get_params())\n",
+    "            print()\n",
+    "\n",
+    "print_model(fitted_model)"
+   ]
   },
   {
    "cell_type": "code",
@@ -222,7 +376,21 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: Save the best model"
+    "# Register model\n",
+    "best_automl_run.register_model(model_path='outputs/model.pkl', model_name='model_automl',\n",
+    "                        tags={'Training context':'Auto ML'},\n",
+    "                        properties={'Accuracy': best_run_metrics['accuracy']})\n",
+    "\n",
+    "# List registered models\n",
+    "for model in Model.list(ws):\n",
+    "    print(model.name, 'version:', model.version)\n",
+    "    for tag_name in model.tags:\n",
+    "        tag = model.tags[tag_name]\n",
+    "        print ('\\t',tag_name, ':', tag)\n",
+    "    for prop_name in model.properties:\n",
+    "        prop = model.properties[prop_name]\n",
+    "        print ('\\t',prop_name, ':', prop)\n",
+    "    print('\\n')"
    ]
   },
   {
@@ -341,9 +509,13 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit (conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "1e915f0a29dc84041eaeb02b7b1a21c440e37a87b61d44d5e84a515737dc82bc"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -355,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
