--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -164,6 +164,16 @@
     "\n",
     "param_sampling = RandomParameterSampling(parameter_space={\"--C\": choice(1, 2, 3, 4, 5, 6), \"--max_iter\": choice(50, 100, 150, 200, 250, 300)})\n",
     "\n",
+    "# Code below creates a new training directory with the train.py script in it\n",
+    "if \"training\" not in os.listdir():\n",
+    "    os.mkdir(\"./training\")\n",
+    "\n",
+    "shutil.copy('train.py', \"./training\")\n",
+    "\n",
+    "# Code creates an output directory to store trained models\n",
+    "if \"outputs\" not in os.listdir():\n",
+    "    os.makedirs('./outputs', exist_ok=True)\n",
+    "\n",
     "estimator =  SKLearn(source_directory='./training', entry_script=\"train.py\", compute_target=cpu_cluster)\n",
     "\n",
     "hyperdrive_run_config = HyperDriveConfig(estimator=estimator,\n",
@@ -202,7 +212,7 @@
    "outputs": [],
    "source": [
     "print('Submitting Hyperdrive experiment...')\n",
-    "hyperdrive_run = exp.submit(hyperdrive_run_config)"
+    "hyperdrive_run = experiment.submit(hyperdrive_run_config)"
    ]
   },
   {
@@ -311,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "Save the best model\n",
+    "# Save the best model\n",
     "best_model = best_run.register_model(\n",
     "    model_name='HypDriveBestModel', \n",
     "    model_path='outputs/', \n",
