clean function edit

--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "from pprint import pprint\n",
     "from azureml.core import Model\n",
-    "from train import clean_data\n",
+    "from train import clean\n",
     "\n",
     "from azureml.core.model import InferenceConfig\n",
     "from azureml.core.environment import Environment\n",
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# Use the clean_data function to clean your data.\n",
-    "x, y = clean_data(data)\n",
+    "x, y = clean(data)\n",
     "\n",
     "import pandas as pd\n",
     "# Add cleaned target column to cleaned predictor variables\n",
