--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -179,7 +179,7 @@
     "hyperdrive_run_config = HyperDriveConfig(estimator=estimator,\n",
     "                                     hyperparameter_sampling=param_sampling,\n",
     "                                     policy=early_termination_policy,\n",
-    "                                     primary_metric_name='AUC_weighted',\n",
+    "                                     primary_metric_name='Accuracy',\n",
     "                                     primary_metric_goal=PrimaryMetricGoal.MAXIMIZE,\n",
     "                                     max_total_runs=20,\n",
     "                                     max_concurrent_runs=4)"
