dataset link update

--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -44,7 +44,7 @@
     "from azureml.core.environment import Environment\n",
     "from azureml.core.webservice import AciWebservice\n",
     "\n",
-    "import pandas as\n",
+    "import pandas as pd\n",
     "import os\n",
     "import json\n",
     "import requests\n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpu_cluster_name = \"cpu-Cluster\" \n",
+    "cpu_cluster_name = \"aml-cluster\" \n",
     "\n",
     "#verify that cluster does not exist already\n",
     "try:\n",
@@ -111,7 +111,7 @@
     "    print('Creating a new compute target...')\n",
     "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_DS12_V2', max_nodes=6)\n",
     "\n",
-    "    cpu_cluster = ComputeTarget(ws, cpu_cluster_name, compute_config)\n",
+    "    cpu_cluster = ComputeTarget.create(ws, cpu_cluster_name, compute_config)\n",
     "\n",
     "cpu_cluster.wait_for_completion(show_output=True, min_node_count = 1, timeout_in_minutes = 10)"
    ]
@@ -135,7 +135,7 @@
    "source": [
     "# retrieve data from github\n",
     "\n",
-    "url = \"https://github.com/ChidiNdego/nd00333-capstone/blob/master/starter_file/loan_default_prediction.csv\"\n",
+    "url = \"https://raw.githubusercontent.com/ChidiNdego/loan-default-capstone-project/master/starter_file/loan_default_prediction.csv\"\n",
     "data = TabularDatasetFactory.from_delimited_files(url)"
    ]
   },
@@ -199,7 +199,7 @@
     "    \"experiment_timeout_minutes\": 30,\n",
     "    \"max_concurrent_iterations\": 5,\n",
     "    \"n_cross_validations\": 5,\n",
-    "    \"primary_metric\" : 'AUC_weighted'\n",
+    "    \"primary_metric\" : 'accuracy'\n",
     "}\n",
     "\n",
     "automl_config = AutoMLConfig(compute_target=cpu_cluster,\n",
@@ -219,7 +219,7 @@
     "*   `\"experiment_timeout_minutes\": 30`: Maximum amount of time (in minutes) to complete training itertions. Set at 30 minutes because dataset has over 10,000 entries.\n",
     "*   `\"max_concurrent_iterations\": 5`: Maximum number of iterations that can be executed simultaneously. Advisably, this value should be less than the number of compute cluster node.\n",
     "*   `\"n_cross_validations\": 5`: Cross validation is a model validation technique used to reduce overfitting. `n` is the number of training examples.\n",
-    "*   `\"primary_metric\" : 'AUC_weighted'`: This parameter determines the metric to be used during model training for optimization. `AUC_weighted` is the generally advised metric for imbalanced classes.\n",
+    "*   `\"primary_metric\" : 'Accuracy'`: This parameter determines the metric to be used during model training for optimization.\n",
     "*   `compute_target=cpu_cluster`: This points to the compute cluster configuration created earlier.\n",
     "*   `task = \"classification\"`: The problem in view is a classification task.\n",
     "*   `training_data=automl_data`: Specifies the dataset to be used: an external dataset already registered in azure datastore.\n",
