--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpu_cluster_name = \"cpu-Cluster\" \n",
+    "cpu_cluster_name = \"aml-cluster\" \n",
     "\n",
     "#verify that cluster does not exist already\n",
     "try:\n",
@@ -100,9 +100,9 @@
     "    print(f\"Found existing cluster: {cpu_cluster_name} to be used.\")\n",
     "except ComputeTargetException:\n",
     "    print('Creating a new compute target...')\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_DS12_V2', max_nodes=4)\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_DS12_V2', max_nodes=6)\n",
     "\n",
-    "    cpu_cluster = ComputeTarget(ws, cpu_cluster_name, compute_config)\n",
+    "    cpu_cluster = ComputeTarget.create(ws, cpu_cluster_name, compute_config)\n",
     "\n",
     "cpu_cluster.wait_for_completion(show_output=True)"
    ]
@@ -133,7 +133,7 @@
     "The two hyperparamters used in this experiment are `C` and `max_iter`. `C` is the Inverse Regularization Strength which applies a penalty to stop increasing the magnitude of parameter values in order to reduce overfitting. `max_iter` is the maximum iteration to converge for the SKLearn Logistic Regression algorithm.\n",
     "\n",
     "Primary Metric is used to optimize the hyperparamter tuning. Each training run is evaluated for the primary metric.\n",
-    "We have chosen `AUC_weighted` as the primary metric. `MAXIMIZE` is the preferred primary metric goal.\n",
+    "We have chosen `Accuracy` as the primary metric. `MAXIMIZE` is the preferred primary metric goal.\n",
     "\n",
     "Early termination policies are applied to HyperDrive runs. A run is cancelled when the criteria of a specified policy are met. The `BanditPolicy` was used.\n",
     "It is based on slack factor/slack amount and evaluation interval. Bandit terminate runs where the primary metric is not within the specified slack factor/slack amount compared to the best performing run. This helps to improves computational efficiency.\n",
@@ -393,9 +393,13 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.5 64-bit (conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "1e915f0a29dc84041eaeb02b7b1a21c440e37a87b61d44d5e84a515737dc82bc"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -407,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5-final"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
