null values update

--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "### Load Workspace\n",
     "\n",
-    "Load the created azure workspace with the `config.json` file present in the working directory. "
+    "Load the exisiting azure workspace. "
    ],
    "cell_type": "markdown",
    "metadata": {}
