endpoint, log, automl edit

--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpu_cluster_name = \"aml-cluster\" \n",
+    "cpu_cluster_name = \"capstone-compute\" \n",
     "\n",
     "#verify that cluster does not exist already\n",
     "try:\n",
