--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -39,11 +39,13 @@
     "from pprint import pprint\n",
     "from azureml.core import Model\n",
     "from train import clean\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "from azureml.core.model import InferenceConfig\n",
     "from azureml.core.environment import Environment\n",
     "from azureml.core.webservice import AciWebservice\n",
     "\n",
+    "import azureml\n",
     "import pandas as pd\n",
     "import os\n",
     "import json\n",
@@ -101,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cpu_cluster_name = \"aml-cluster\" \n",
+    "cpu_cluster_name = \"capstone-compute\" \n",
     "\n",
     "#verify that cluster does not exist already\n",
     "try:\n",
@@ -160,6 +162,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train, test = train_test_split(train_data, test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get default datastore\n",
     "default_ds = ws.get_default_datastore()\n",
     "\n",
@@ -209,6 +220,7 @@
     "                             enable_early_stopping= True,\n",
     "                             featurization= 'auto',\n",
     "                             debug_log = \"automl_errors.log\",\n",
+    "                             enable_onnx_compatible_models=True,\n",
     "                             **automl_settings)"
    ]
   },
@@ -282,7 +294,7 @@
    },
    "outputs": [],
    "source": [
-    "RunDetails(automl_run).show()\n",
+    "RunDetails(remote_run).show()\n",
     "remote_run.wait_for_completion(show_output=True)"
    ]
   },
@@ -377,7 +389,7 @@
    "outputs": [],
    "source": [
     "# Register model\n",
-    "best_automl_run.register_model(model_path='outputs/model.pkl', model_name='model_automl',\n",
+    "bestModel = best_automl_run.register_model(model_path='outputs/model.pkl', model_name='model_automl',\n",
     "                        tags={'Training context':'Auto ML'},\n",
     "                        properties={'Accuracy': best_run_metrics['accuracy']})\n",
     "\n",
@@ -391,6 +403,64 @@
     "        prop = model.properties[prop_name]\n",
     "        print ('\\t',prop_name, ':', prop)\n",
     "    print('\\n')"
+   ]
+  },
+  {
+   "source": [
+    "## Get Onnx Model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azureml.automl.runtime.onnx_convert import OnnxConverter\n",
+    "\n",
+    "best_run , onnx_model = remote_run.get_output(return_onnx_model=True)\n",
+    "onnx_path = \"./best_model.onnx\"\n",
+    "OnnxConverter.save_onnx_model(onnx_model, onnx_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from azureml.automl.core.onnx_convert import OnnxConvertConstants\n",
+    "from azureml.train.automl import constants\n",
+    "\n",
+    "if sys.version_info < OnnxConvertConstants.OnnxIncompatiblePythonVersion:\n",
+    "    python_version_compatible = True\n",
+    "else:\n",
+    "    python_version_compatible = False\n",
+    "\n",
+    "import onnxruntime\n",
+    "from azureml.automl.runtime.onnx_convert import OnnxInferenceHelper\n",
+    "\n",
+    "def get_onnx_res(run):\n",
+    "    res_path = 'onnx_resource.json'\n",
+    "    run.download_file(name=constants.MODEL_RESOURCE_PATH_ONNX, output_file_path=res_path)\n",
+    "    with open(res_path) as f:\n",
+    "        onnx_res = json.load(f)\n",
+    "    return onnx_res\n",
+    "\n",
+    "if python_version_compatible:\n",
+    "    model_bytes = onnx_model.SerializeToString()\n",
+    "    onnx_res = get_onnx_res(best_run)\n",
+    "\n",
+    "    onnxrt_helper = OnnxInferenceHelper(model_bytes, onnx_res)\n",
+    "    pred_onnx, pred_prob_onnx = onnxrt_helper.predict(test)\n",
+    "\n",
+    "    print(pred_onnx)\n",
+    "    print(pred_prob_onnx)\n",
+    "else:\n",
+    "    print('Please use Python version 3.6 or 3.7 to run the inference helper.')"
    ]
   },
   {
@@ -422,7 +492,13 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# download scoring file \n",
+    "best_automl_run.download_file('outputs/scoring_file_v_1_0_0.py', 'score.py')\n",
+    "\n",
+    "# download environment file\n",
+    "best_automl_run.download_file('outputs/conda_env_v_1_0_0.yml', 'envFile.yml')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -463,7 +539,86 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "inference_config = InferenceConfig(entry_script='score.py',\n",
+    "                                    environment=best_automl_run.get_environment())\n",
+    "\n",
+    "# deploying model\n",
+    "\n",
+    "deployment_config = AciWebservice.deploy_configuration(cpu_cores = 1, memory_gb = 1, auth_enabled=True)\n",
+    "service = Model.deploy(workspace = ws, \n",
+    "                    name = \"deployed-best-model\", \n",
+    "                    models = [bestModel], \n",
+    "                    inference_config = inference_config, \n",
+    "                    deployment_config = deployment_config,\n",
+    "                    overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service.wait_for_deployment(show_output = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Service state: {service.state}\")\n",
+    "print(f\"Scoring URI : {service.scoring_uri}\")\n",
+    "print(f\"Swagger URI: {service.swagger_uri}\")\n",
+    "print(f\"Primary key: {service.get_keys()[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Enabling logging\n",
+    "!python3 logs.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# select sample data\n",
+    "x_samp = train_data.sample(4) # data is the pandas dataframe of the original data\n",
+    "y_samp = x_samp.pop('loanDefault')\n",
+    "\n",
+    "# convert data samples to json format\n",
+    "sample = json.dumps({'data': x_samp.to_dict(orient='records')})\n",
+    "\n",
+    "print(sample)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,19 +644,68 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# option 1: through endpoint.py script\n",
+    "!python3 endpoint.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# option 2\n",
+    "# Used for http post request\n",
+    "\n",
+    "# Set the content type\n",
+    "headers = {'Content-type': 'application/json'}\n",
+    "response = requests.post(service.scoring_uri, test_sample, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print results from the inference\n",
+    "print(response.text)\n",
+    "print(response.status_code)\n",
+    "print(response.elapsed)\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print original labels\n",
+    "print(y_samp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(service.get_logs())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# deleting the service\n",
+    "service.delete()"
+   ]
   }
  ],
  "metadata": {
