hypdrive and automl update

--- a/starter_file/automl.ipynb
+++ b/starter_file/automl.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Automated ML\n",
     "\n",
-    "Import Dependencies."
+    "Import dependencies."
    ]
   },
   {
@@ -53,12 +53,17 @@
     "from azureml.core.environment import Environment\n",
     "from azureml.core.webservice import AciWebservice\n",
     "\n",
-    "import azureml\n",
+    "from azureml.automl.runtime.onnx_convert import OnnxConverter\n",
+    "from azureml.automl.core.onnx_convert import OnnxConvertConstants\n",
+    "from azureml.train.automl import constants\n",
+    "\n",
     "import pandas as pd\n",
-    "import os\n",
-    "import json\n",
+    "import azureml\n",
     "import requests\n",
     "import joblib\n",
+    "import json\n",
+    "import sys\n",
+    "import os\n",
     "\n",
     "# Check core SDK version number\n",
     "print(\"SDK version:\", azureml.core.VERSION)"
@@ -167,6 +172,7 @@
     "# retrieve data from github\n",
     "\n",
     "url = \"https://raw.githubusercontent.com/ChidiNdego/loan-default-capstone-project/master/starter_file/loan_default_prediction.csv\"\n",
+    "\n",
     "data = TabularDatasetFactory.from_delimited_files(url)"
    ]
   },
@@ -404,11 +410,10 @@
     }
    ],
    "source": [
-    "# Use the clean_data function to clean your data.\n",
+    "# use the clean function to polish the data.\n",
     "x, y = clean(data)\n",
     "\n",
-    "import pandas as pd\n",
-    "# Add cleaned target column to cleaned predictor variables\n",
+    "# add cleaned target column to cleaned predictor variables\n",
     "train_data = pd.concat([x,y],axis=1)\n",
     "train_data.head()"
    ]
@@ -449,10 +454,10 @@
     }
    ],
    "source": [
-    "# Get default datastore\n",
+    "# get default datastore\n",
     "default_ds = ws.get_default_datastore()\n",
     "\n",
-    "# Register the dataset with name 'AutoML_data'\n",
+    "# register the dataset\n",
     "dataSet = TabularDatasetFactory.register_pandas_dataframe(train_data,target=(default_ds,'AutoMLData'),name='AutoML_data',show_progress=True)\n",
     "\n",
     "automl_data = ws.datasets.get('AutoML_data')"
@@ -517,7 +522,8 @@
     "*   `training_data=automl_data`: Specifies the dataset to be used: an external dataset already registered in azure datastore.\n",
     "*   `label_column_name=\"loanDefault\"`: Specifies the dependent variable to be predicted.\n",
     "*   `enable_early_stopping=True`: Allows for an early stopping rule to be applied.\n",
-    "*   `featurization= 'auto'`: Allows azure to automatically perform feature engineering."
+    "*   `featurization= 'auto'`: Allows azure to automatically perform feature engineering.\n",
+    "*   `enable_onnx_compatible_models=True`: Allows for model to be converted to onnx format."
    ]
   },
   {
@@ -548,7 +554,7 @@
     }
    ],
    "source": [
-    "# Submit your experiment\n",
+    "# submit your experiment\n",
     "print('Submitting AutoML experiment...')\n",
     "remote_run = experiment.submit(automl_config)"
    ]
@@ -747,7 +753,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?"
+    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
+    "\n",
+    "`RandomForest` is an ensemble of Decision trees. Random Forests performs Bagging internally. It creates several trees and calculates the best possible model for a given dataset. Instead of considering all features while splitting a node, Random Forest algorithm selects the best feature out of a subset of all features. This trades a higher bias for lower variance, which potentially yields a very good model.\n",
+    "\n",
+    "`XGBoostClassifier` is a powerful gradient boosting method that assigns positive and negative values to every decision made. All Trees are weak learners and provide decisions slightly better than a random guess. But collectively averaged out, XGBoost performs really well.\n",
+    "\n",
+    "`VotingEnsemble` which happens to be the best model from the run, uses diverse algorithms and then ensemble them to predict the final output. Say, you use a Random Forest Classifier, XGBoost Classifier, SVM Classifier, Linear Regression etc.; models are pitted against each other and selected upon best performance by voting using the VotingClassifier Class from sklearn.ensemble. This probably explains why it turned out to be the best."
    ]
   },
   {
@@ -756,7 +768,7 @@
    "source": [
     "## Best Model\n",
     "\n",
-    "TODO: In the cell below, get the best model from the automl experiments and display all the properties of the model.\n",
+    "Get the best model from the automl experiments and display all the properties of the model.\n",
     "\n"
    ]
   },
@@ -835,12 +847,12 @@
     }
    ],
    "source": [
-    "# Retrieve the best automl model\n",
+    "# retrieve the best automl model\n",
     "\n",
     "best_automl_run, fitted_model = remote_run.get_output()\n",
     "print(best_automl_run)\n",
     "\n",
-    "#Returns the various metric values for the best run\n",
+    "# returns the various metric values for the best run\n",
     "best_run_metrics = best_automl_run.get_metrics()\n",
     "for metric_name in best_run_metrics:\n",
     "    metric = best_run_metrics[metric_name]\n",
@@ -1117,7 +1129,7 @@
     }
    ],
    "source": [
-    "# Parameters of the best model\n",
+    "# parameters of the best model\n",
     "def print_model(model, prefix=\"\"):\n",
     "    for step in model.steps:\n",
     "        print(prefix + step[0])\n",
@@ -1171,12 +1183,12 @@
     }
    ],
    "source": [
-    "# Register model\n",
+    "# register the model\n",
     "bestModel = best_automl_run.register_model(model_path='outputs/model.pkl', model_name='model_automl',\n",
     "                        tags={'Training context':'Auto ML'},\n",
     "                        properties={'Accuracy': best_run_metrics['accuracy']})\n",
     "\n",
-    "# List registered models\n",
+    "# list the registered trained models\n",
     "for model in Model.list(ws):\n",
     "    print(model.name, 'version:', model.version)\n",
     "    for tag_name in model.tags:\n",
@@ -1189,10 +1201,19 @@
    ]
   },
   {
+   "source": [
+    "Out of the two models generated, the automl appears to be the best with an Accuracy of `85.22%`. Hence, the automl model is the chosen model for deployment.\n",
+    "\n",
+    "However, before deployment let's export or model with ONNX - Open Neural Network Exchange. This model format allows for conversion of models from one framework to another, or even to deploy trained models to devices such as iOS or Android devices."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get Onnx Model"
+    "## Get model with ONNX"
    ]
   },
   {
@@ -1201,8 +1222,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.automl.runtime.onnx_convert import OnnxConverter\n",
-    "\n",
     "best_run , onnx_model = remote_run.get_output(return_onnx_model=True)\n",
     "onnx_path = \"./best_model.onnx\"\n",
     "OnnxConverter.save_onnx_model(onnx_model, onnx_path)"
@@ -1229,10 +1248,6 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "from azureml.automl.core.onnx_convert import OnnxConvertConstants\n",
-    "from azureml.train.automl import constants\n",
-    "\n",
     "if sys.version_info < OnnxConvertConstants.OnnxIncompatiblePythonVersion:\n",
     "    python_version_compatible = True\n",
     "else:\n",
@@ -1267,10 +1282,15 @@
    "source": [
     "## Model Deployment\n",
     "\n",
-    "Remember you have to deploy only one of the two models you trained.. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
-    "\n",
-    "TODO: In the cell below, register the model, create an inference config and deploy the model as a web service."
+    "Deploying the best model: AutoML."
    ]
+  },
+  {
+   "source": [
+    "Register the model, create an inference config and deploy the model as a web service."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1299,27 +1319,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "gather": {
-     "logged": 1598431657736
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
-   "source": [
-    "TODO: In the cell below, send a request to the web service you deployed to test it."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -1338,6 +1337,8 @@
    },
    "outputs": [],
    "source": [
+    "# create an inference configuration\n",
+    "\n",
     "inference_config = InferenceConfig(entry_script='score.py',\n",
     "                                    environment=best_automl_run.get_environment())\n",
     "\n",
@@ -1409,11 +1410,22 @@
     }
    ],
    "source": [
+    "# return service information to be used for model consumption\n",
+    "\n",
     "print(f\"Service state: {service.state}\")\n",
     "print(f\"Scoring URI : {service.scoring_uri}\")\n",
     "print(f\"Swagger URI: {service.swagger_uri}\")\n",
     "print(f\"Primary key: {service.get_keys()[0]}\")"
    ]
+  },
+  {
+   "source": [
+    "#### Enable logging\n",
+    "\n",
+    "Logging is a core pillar of MLOps. It gives information on how the deployed model is behaving."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1470,8 +1482,30 @@
     }
    ],
    "source": [
-    "### Enabling logging\n",
     "!python3 logs.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "gather": {
+     "logged": 1598431657736
+    },
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "source": [
+    "#### Consume deployed services\n",
+    "\n",
+    "Send a request to the web service you deployed to test it."
    ]
   },
   {
@@ -1509,25 +1543,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "gather": {
-     "logged": 1598432765711
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
    "source": [
-    "TODO: In the cell below, print the logs of the web service and delete the service"
-   ]
+    "Copy sample data, scoring uri, and the service's primary key and update in the `endpoint.py` script before running the cell below."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -1543,7 +1563,7 @@
     }
    ],
    "source": [
-    "# through endpoint.py script\n",
+    "# response from model endpoint\n",
     "!python3 endpoint.py"
    ]
   },
@@ -1565,8 +1585,36 @@
     }
    ],
    "source": [
-    "# Print original labels\n",
+    "# print original labels\n",
     "print(y_samp)"
+   ]
+  },
+  {
+   "source": [
+    "Evidently, the model endpoint rightly returns the expected output."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "gather": {
+     "logged": 1598432765711
+    },
+    "jupyter": {
+     "outputs_hidden": false,
+     "source_hidden": false
+    },
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
+   "source": [
+    "Print the logs of the web service and delete the service"
    ]
   },
   {
@@ -1638,6 +1686,8 @@
     }
    ],
    "source": [
+    "# web service log\n",
+    "\n",
     "print(service.get_logs())"
    ]
   },
@@ -1647,16 +1697,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# deleting the service\n",
+    "# delete the service\n",
+    "\n",
     "service.delete()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
