--- a/starter_file/hyperparameter_tuning.ipynb
+++ b/starter_file/hyperparameter_tuning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Hyperparameter Tuning using HyperDrive\n",
     "\n",
-    "Import Dependencies."
+    "Import dependencies."
    ]
   },
   {
@@ -32,8 +32,7 @@
     "from azureml.train.hyperdrive.parameter_expressions import choice\n",
     "\n",
     "import os\n",
-    "import shutil\n",
-    "import joblib"
+    "import shutil"
    ]
   },
   {
@@ -94,7 +93,7 @@
    "source": [
     "### Compute Cluster Configuration\n",
     "\n",
-    "Setting up the virtual machine and other cluster configuration needed in running the experiment. "
+    "Set up the virtual machine and other cluster configuration needed in running the experiment. "
    ]
   },
   {
@@ -278,8 +277,6 @@
    },
    "source": [
     "## Run Details\n",
-    "\n",
-    "OPTIONAL: Write about the different models trained and their performance. Why do you think some models did better than others?\n",
     "\n",
     "Use the `RunDetails` widget to show the different experiments."
    ]
@@ -480,7 +477,7 @@
     }
    },
    "source": [
-    "## Model Deployment\n",
+    "## Model Deployment - `NOT APPLICABLE`\n",
     "\n",
     "Remember you have to deploy only one of the two models you trained.. Perform the steps in the rest of this notebook only if you wish to deploy this model.\n",
     "\n",
